# MalaPy

./: .gitignore  README.md  malapy.py  pyproject.toml
src/: malapy.py
src/MalaPy.egg-info/: PKG-INFO
